--- a/index.html
+++ b/index.html
@@ -19,9 +19,195 @@
     </header>
 
     <main class="meeting">
-      
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div> 
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div> 
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div> 
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div> 
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="partecipant-name"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</div>
+                    </div>
+                </div> 
+            </div>
+        </div>      
     </main>
-
+    
     <footer class="footer-controls">
 
     </footer>
