--- a/index.html
+++ b/index.html
@@ -208,8 +208,76 @@
         </div>      
     </main>
     
-    <footer class="footer-controls">
+    <footer class="footer-controls flex">
+        <div class="left-footer-controls flex">
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-microphone"></i>
+                    <div class="footer-btn-desc">mute</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-video"></i>
+                    <div class="footer-btn-desc">stop video</div>
+                </div>
+            </button> 
+        </div>
 
+        <div class="center-footer-controls flex">
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-user-plus"></i>
+                    <div class="footer-btn-desc">invite</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-user-group"></i>
+                    <div class="footer-btn-desc">manage partecipants</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-chart-column"></i>
+                    <div class="footer-btn-desc">polling</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-share-from-square"></i>
+                    <div class="footer-btn-desc">share screen</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-comment"></i>
+                    <div class="footer-btn-desc">chat</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-record-vinyl"></i>
+                    <div class="footer-btn-desc">record</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-table-cells-large"></i>
+                    <div class="footer-btn-desc">breakout rooms</div>
+                </div>
+            </button>
+            <button class="footer-btn">
+                <div class="visual-btn">
+                    <i class="fa-solid fa-ellipsis"></i>
+                    <div class="footer-btn-desc">more</div>
+                </div>
+            </button>
+        </div>
+
+        <div class="right-footer flex">
+            <button class="end-btn">end meeting</button>
+        </div>
     </footer>
 </body>
 </html>
